--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -54,6 +54,7 @@ header#masthead-fp {
 	div {
 		flex: 0 1 auto;
 		align-self: center;
+		flex-basis: auto;
 		margin: 0 20px;
 	}
 
@@ -80,6 +81,7 @@ header#masthead {
 	div {
 		flex: 0 1 auto;
 		align-self: center;
+		flex-basis: auto;
 		margin: 0 20px;
 	}
 
@@ -115,9 +117,46 @@ footer#colophon {
 	.hero-content {
 		flex: auto;
 		align-self: flex-end;
+		flex-basis: auto;
 	}
 }
 
 #primary {
 	position: relative;
+}
+
+.aboutContainer {
+	display: flex;
+	justify-content: space-between;
+	flex-direction: column;
+	align-items: stretch;
+	align-content: stretch;
+
+	.leftSideContent {
+		order: 1;
+		flex: 0 2 auto;
+		align-self: auto;
+		flex-basis: auto;
+	}
+
+	.rightSideContent {
+		order: 0;
+		flex: 0 1 auto;
+		align-self: auto;
+		flex-basis: auto;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: center center;
+		margin-top: 80px;
+		height: 50vh;
+	}
+}
+
+.archiveArticle {
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	height: 21.875em;
+	padding-top: 25%;
+	padding-bottom: 25%;
 }
