added a gitignore and prepped the site for posting to site.

--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -43,6 +43,9 @@ template {
 
 a {
 	background-color: transparent;
+	text-decoration: none;
+	font-family: $font__main;
+	font-weight: bold;
 }
 
 a:active,
@@ -65,7 +68,7 @@ dfn {
 
 h1 {
 	font-size: 2em;
-	margin: 0.67em 0;
+	margin: 0.67em 0 0 0;
 }
 
 mark {
