--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -17,7 +17,7 @@
 	align-items: center;
 	align-content: center;
 
-	ul#main-navigation {
+	#main-navigation {
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
@@ -35,6 +35,8 @@
 		a {
 			display: block;
 			text-decoration: none;
+			font-family: $font__heading;
+			@include font-size(3);
 		}
 
 		.current_page_item > a,
