--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -1,4 +1,5 @@
 p {
+	font-family: $font__main;
 	margin-bottom: 1.5em;
 }
 
@@ -7,6 +8,9 @@ dfn, cite, em, i {
 }
 
 blockquote {
+	font-family: $font__blockquote;
+	color: #000;
+	@include font-size(1.75);
 	margin: 0 1.5em;
 }
 
