--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -35,6 +35,7 @@
 		a {
 			display: block;
 			text-decoration: none;
+			text-align: center;
 			font-family: $font__heading;
 			@include font-size(3);
 		}
