--- a/sass/mobile-styles.scss
+++ b/sass/mobile-styles.scss
@@ -1,30 +1,3 @@
-#masthead-fp {
-	position: absolute;
-	top: 0;
-	z-index: 1000;
-	width: 100%;
-	height: 80px;
-	padding: 1.125em 0;
-	background: -moz-linear-gradient(top, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top, rgba(0,0,0,0.5) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom, rgba(0,0,0,0.5) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
-	display: flex;
-	justify-content: space-around;
-
-	div {
-		flex: 0 1 auto;
-		align-self: center;
-		flex-basis: auto;
-		margin: 0 20px;
-	}
-
-	button {
-		color: #fff;
-		padding: .6em .4em;
-	}
-}
-
 #masthead {
 	position: absolute;
 	top: 0;
@@ -55,7 +28,6 @@
 #colophon {
 	background-color: #000;
 	padding: 3.25em .125em;
-	margin-top: 80px;
 
 	a {
 		color: #fff;
@@ -146,7 +118,26 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
-	height: 21.875em;
-	padding-top: 25%;
-	padding-bottom: 25%;
+	height: 500px;
+	padding: 8rem 2rem;
+
+	&:after {
+		content: "";
+		display: block;
+		position: absolute;
+		background-color: rgba(0, 0, 0, 0.2);
+		background: rgba(0, 0, 0, 0.2);
+		color: rgba(0, 0, 0, 0.2);
+		height: 100%;
+		width: 100%;
+		z-index: 0;
+		left: 0;
+		top: 0;
+	}
+
+	h2, h4, p {
+		position: relative;
+		z-index: 1;
+		color: #fff;
+	}
 }
