--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ a {
 #menu-container.open {
   position: absolute;
   bottom: 0;
-  z-index: 1;
+  z-index: 9999;
   width: 100vw;
   height: 100vh;
   background-color: #fff;
@@ -479,9 +479,9 @@ a {
   align-items: center;
   align-content: center; }
   #menu-container.open #main-navigation {
-    list-style: none;
     margin: 0;
-    padding-left: 0; }
+    padding-left: 0;
+    list-style-type: none; }
     #menu-container.open #main-navigation li {
       flex: 0 1 auto;
       flex-basis: auto;
@@ -2382,32 +2382,6 @@ object {
 /*--------------------------------------------------------------
 # Mobile Styles
 --------------------------------------------------------------*/
-#masthead-fp {
-  position: absolute;
-  top: 0;
-  z-index: 1000;
-  width: 100%;
-  height: 80px;
-  padding: 1.125em 0;
-  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, transparent 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, transparent 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, transparent 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80000000', endColorstr='#00000000',GradientType=0 );
-  /* IE6-9 */
-  display: flex;
-  justify-content: space-around; }
-  #masthead-fp div {
-    flex: 0 1 auto;
-    align-self: center;
-    flex-basis: auto;
-    margin: 0 20px; }
-  #masthead-fp button {
-    color: #fff;
-    padding: .6em .4em; }
-
 #masthead {
   position: absolute;
   top: 0;
@@ -2432,8 +2406,7 @@ object {
 
 #colophon {
   background-color: #000;
-  padding: 3.25em .125em;
-  margin-top: 80px; }
+  padding: 3.25em .125em; }
   #colophon a {
     color: #fff; }
 
@@ -2513,9 +2486,24 @@ object {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: 21.875em;
-  padding-top: 25%;
-  padding-bottom: 25%; }
+  height: 500px;
+  padding: 8rem 2rem; }
+  .archiveArticle:after {
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0, 0.2);
+    height: 100%;
+    width: 100%;
+    z-index: 0;
+    left: 0;
+    top: 0; }
+  .archiveArticle h2, .archiveArticle h4, .archiveArticle p {
+    position: relative;
+    z-index: 1;
+    color: #fff; }
 
 /*--------------------------------------------------------------
 # Tablet Styles
@@ -2530,11 +2518,16 @@ object {
     width: 50%; }
   .rightSideContent {
     width: 50%;
-    height: auto;
-    margin-bottom: -80px;
+    height: 100vh;
     background-repeat: no-repeat;
     background-size: cover; }
   #colophon {
     position: relative;
     bottom: 0;
-    width: 100%; } }
+    width: 100%; }
+  .post-article {
+    height: 500px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 20px; } }
